# idekube-container

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-bake.hcl  docker-bake.production.hcl  docker-bake.staging.hcl
.github/actions/setup-docker-buildx/: action.yml
.github/workflows/: publish-agent-openclaw-scheduled.yml  publish-production.yml  publish.yml
qemu-builder/: .dockerignore  CLAUDE.md  README.md
qemu-builder/artifacts/configs/: user-data.yaml
qemu-builder/artifacts/featured/rootfs/etc/skel/: .bashrc
qemu-builder/artifacts/rootfs/: authn.sh
qemu-builder/artifacts/rootfs/etc/idekube/: vm-init.sh
qemu-builder/artifacts/rootfs/etc/nginx/conf.d/: access_token.conf
qemu-builder/artifacts/startup-scripts/: run.sh  startup.sh
qemu-builder/manifests/qemu/: Dockerfile  Dockerfile.dockerignore  Dockerfile.engine  Dockerfile.engine.dockerignore
qemu-builder/manifests/qemu/featured/base/: .env
qemu-builder/manifests/qemu/featured/kathara/: README.md  install.yml
qemu-builder/scripts/shell/: build_qemu.sh  build_qemu_root.sh  build_wsl.sh  manifest_qemu.sh  prepare_qemu_files.sh  prepare_qemu_images.sh  prepare_qemu_tools.sh  publish_qemu.sh  qemu_common.sh
qemu-builder/tools/utility/qemu-to-wsl/: Dockerfile  convert.sh
scripts/: tag-stable.sh
tests/: conftest.py  pyproject.toml  test_auth.py  test_dind.py  test_env.py  test_gpu.py  test_health.py  test_image_refs.py  test_landing.py  test_services.py  test_ssh.py
tests/helpers/: constants.py  containers.py  images.py
(+3 files in other folders)
